final reviews completed

--- a/final_project/project03/comments.html
+++ b/final_project/project03/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 3</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,77 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 3</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>The conclusion “Our findings have important implications for
+public health monitoring and intervention planning” is over-stated and
+not supported by evidence or other lines of reasoning.</p></li>
+<li><p>At another point, the report conclusion claims a primary research
+question was: “Can a partially-observed-Markov-process (pomp) time
+series model effectively represent the flu cases in Michigan?”. The
+subsequent paragraph explains the support for an answer “yes” for a
+defined meaning of “effectively”. That is an appropriate conclusion,
+supported by evidence.</p></li>
+<li><p>The phase profile is misinterpreted: “The singleton CI suggests
+limited identifiability — the likelihood is sharply peaked at one value.
+This indicates the data contains insufficient information about the
+seasonal timing.” The sharp peak shows very strong identifability, which
+might be expected from the known seasonal behavior of flu.</p></li>
+<li><p>The rho profile is misinterpreted similarly. The beta0 profile is
+described as “smooth and fairly symmetric near the peak” when the
+plotted profile doesn’t seem to have these properties.</p></li>
+<li><p>Data of this kind can be more insightfully plotted on a log scal
+(presented in the project later). Also, the linear analysis (additive
+decomposition, periodogram, ARMA) are better on a log scale.</p></li>
+<li><p>Incorrect reasoning: “the ACF plot of the log-transformed data
+still exhibits a slow decay, indicating that the series remains
+non-stationary.” The usual motivation for the sample ACF assumes a
+stationary model.</p></li>
+<li><p>The interpretation of ARMA residuals is poor, “the residuals are
+normally distributed but contain some extreme values.” These are far
+from normal, and the time plot of residuals shows extreme
+heterskedasticity. The residual diagnostics are trying to remind the
+team that they should consider a logarithmic transformation.</p></li>
+<li><p>The ARMA benchmark should be carried out as log-ARMA for
+situations where ARMA fits better on a log scale, as in Chapter 18
+(measles case study).</p></li>
+<li><p>The report acknowledges previous 531 flu projects, but it does
+not explain its own creative contribution beyond applying similar
+approaches to a new dataset. There is much room for improving on
+previous approaches, and your own contribution should be clarified. A
+new dataset could involve unique modeling and inference challenges that
+require substantial creativity, but the report does not make that
+argument.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>It is not clear what is learned from the additive decomposition
+that cannot be seen more clearly from other plots. To study seasonality
+of nonlinear and highly variable systems, a simple line plot of
+superposed seasonal trajectories can be more informative.</p></li>
+<li><p>For comparing ARMA to SARMA it would be better to use AIC than
+likelihood, since degrees of freedom differ. Or make a likelihood ratio
+test using Wilks’ approximation.</p></li>
+<li><p>The conclusion “peaks occurring approximately every 60 weeks
+(around 1.15 years)” is curious. The data are only for about 2yr, so
+seasonality will not be well identified. But, if it has a relationship
+with the annual cycle, presumably that would be at a period of 1.0
+yr.</p></li>
+<li><p>Sections are numbered, but there are no figure captions or figure
+numbers.</p></li>
+</ul>
+</div>
 
 
 
