--- a/final_project/project04/comments.html
+++ b/final_project/project04/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 4</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,91 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 4</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>The introduction is brief and does not outline goals of the
+project or relevant background information.</p></li>
+<li><p>The project shows a scientific, self-critical attitude towards
+the analysis results in improvements in the model.</p></li>
+<li><p>The project leverages high-performance computing (Great Lakes
+cluster) with large-scale sampling: NP = 5000, particles, NMIF = 200
+iterations, 400–800 guesses to investigate the complex parameter spaces
+for their mechanistic models.</p></li>
+<li><p>Referees reported that the code ran reproducibly.</p></li>
+<li><p>The interpretation of ARMA residuals is poor, “The residual time
+series appears centered around zero with no clear patterns.” The time
+plot of residuals shows extreme heterskedasticity. The residual
+diagnostics are trying to remind the team that they should consider a
+logarithmic transformation. Also, the residuals are long-tailed compared
+to normal.</p></li>
+<li><p>The roots on, and close to, the unit circle suggest poor
+stability. Thus, the conclusion that “the roots confirm stationarity and
+invertibility” is weak. There’s no point looking at diagnostic plots if
+you ignore what they are telling you.</p></li>
+<li><p>The ARMA benchmark should be carried out as log-ARMA for
+situations where ARMA fits better on a log scale, as in Chapter 18
+(measles case study).</p></li>
+<li><p>It is hard to interpret the value of a log-likelihood as an
+argument for or against the model; usually, log-likelihood is useful
+only to compare models. Thus, there is weak reasoning in the conclusion:
+“Given the relatively large sample size and the complexity of the data
+(confirmed, recovered, and deceased cases), this log-likelihood value
+suggests that the VAR(9) model provides a reasonable fit to the data,
+capturing the main dynamics without overfitting.”</p></li>
+<li><p>The Fig 5 residual plot is showing the log-scale variation that
+is reminded to use a logarithmic transformation of the data. The
+explanation of this figure as “no clear patterns, although some variance
+increases during peaks” makes two incompatible points; first saying
+there is not a pattern and then identifying one.</p></li>
+<li><p>The report references a previous project that was influential for
+their analysis (<a href="https://ionides.github.io/531w24/final_project/project12/blinded.html" class="uri">https://ionides.github.io/531w24/final_project/project12/blinded.html</a>).
+The report could do a better job explaining explicitly what they learned
+from that project and what their own creative innovations were. This
+project made plenty of its own contributions, but the reader should not
+have to go to past projects to assess this.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>Innovative use of a vector autoregressive (VAR) model. However,
+it is not clear how this supports substantial conclusions.</p></li>
+<li><p>Erratic use of boldface makes the text harder to read.</p></li>
+<li><p>Incorrect reasoning: “The ACF and PACF plots for confirmed,
+recovered, and deceased cases show strong autocorrelation and slow
+decay, indicating non-stationarity and the need for differencing”. The
+usual motivation for the sample ACF assumes a stationary model. Also,
+differencing is only one way to build a non-stationary model.</p></li>
+<li><p>Fig 1 needs a different scale for deceased. That line is not
+legible in its current form.</p></li>
+<li><p>ARIMA(5,1,5) is a large model, but also it is not the model with
+lowest AIC. How about ARIMA(1,1,3) or (1,1,4)?</p></li>
+<li><p>Fixing immunity at 4yr (mu_RS = 1/(4*52)) seems reasonable as an
+explanation of COVID.</p></li>
+<li><p>VAR is described as “more transparent” and “easier to interpret”.
+Yet, no useful interpretation of this model is provided.</p></li>
+<li><p>VAR diagnostics show longer than normal tails. A time plot (not
+shown) would also reveal heterskedasticity.</p></li>
+<li><p>“The fitted values closely capture the major trends and
+variations in the data, supporting the use of the VAR model for
+analyzing the dynamic relationships between these pandemic variables.”
+Authors should check whether using last week to predict this week is
+detectably worse.</p></li>
+<li><p>POMP models can have multiple observable quantities, like VAR.
+The report correctly points out that VAR is simpler than mechanistic
+POMP models.</p></li>
+<li><p>Fig 4 has a typo in the time axis (it runs 2024 - 2041).</p></li>
+</ul>
+</div>
 
 
 
