--- a/final_project/project02/comments.html
+++ b/final_project/project02/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 2</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,49 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 2</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>A great introduction. Helpful for a reader with general time
+series interests but no specific prior experience with sports analytics.
+The conclusions are carefully worded and are supported by the
+results.</p></li>
+<li><p>Poisson noise (no overdispersion) in the main observation model.
+Subsequently, there is a nice analysis of how negative binomial noise is
+investigated but is found to be less necessary for a model having
+opponent covariates and momentum. Alternatively, the negative binomial
+model could imply that momentum is not necessary. Apparently, one team
+for one season is not enough to distinguish this. The authors recognize
+this. They appropriately investigate the question of whether momentum
+matters with an open mind, looking for the evidence both ways coming
+from the models and data.</p></li>
+<li><p>The analysis is missing a benchmark, but does compare to
+alternative versions of the model.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>Section/equation/figure numbers would be helpful.</p></li>
+<li><p>The form of the model is not given any justification. Maybe this
+sort of social science does not have strong reasons to prefer one model
+over another; it could be just an empirical question. But the issue
+should be addressed.</p></li>
+<li><p>a typo in the normal transition density model: <span class="math inline">\(\phi x_{n-1}\)</span> should be <span class="math inline">\(x_n - \phi x_{n-1}\)</span>.</p></li>
+<li><p>Future work could extend this to more teams. That extended
+analysis is beyond the reasonable scope of a 531 final project.</p></li>
+<li><p>Note that the Tigers offensive skill (<span class="math inline">\(X_n\)</span>) autoregresses toward 0 but we add a
+team-specific long-run average skill, <span class="math inline">\(\mu\)</span>.</p></li>
+</ul>
+</div>
 
 
 
