--- a/final_project/project05/comments.html
+++ b/final_project/project05/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 5</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,56 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 5</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>The inclusion of mosquito dynamics is original in the context of
+531. The resulting POMP model is clearly explained.</p></li>
+<li><p>In the conclusion, these two likelihoods are improperly compared:
+“as seen in the difference in likelihoods between the SARIMA model (-96)
+and the POMP models (-328), there is a significant scope for improvement
+in the mechanistic models.” The SARIMA is fitted to the log of the data,
+and not adjusted for the transformation.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>The STL decomposition is informative here, unlike various other
+epidemic time sereis. Here, it is not necessary to take logarithms to
+linearize the dynamics, because this low-prevalence situation (in US,
+malaria does not spread effectively) is already close to linear,
+additive dynamics.</p></li>
+<li><p>One could consider detrending rather than concluding
+“differencing the series will be advisable and possibly
+needed.”</p></li>
+<li><p>Using a periodogram to infer seasonality is overkill. If the
+periodogram does not show anything surprising (often the case) you don’t
+have to claim that you use it to infer annual seasonality.</p></li>
+<li><p>SARIMA model AIC comparison does not take into account the loss
+of a datapoint when differencing; AIC is not perfectly
+comparable.</p></li>
+<li><p>The SARIMA residual diagnostics show a good fit. The report does
+not explain clearly that this is fitted to the log of the data.</p></li>
+<li><p>It would be nice to have the Jacobian correction so that the
+SARIMA log-likelihood for log-data can be properly compared to the POMP
+log-likelihood for the raw data.</p></li>
+<li><p>Two log-likelihoods claimed to both equal -332.02 are neither
+equal to -332.01 (they are -331.077 and -331.386). A strange typo, but
+fortunately these likelihoods are indeed close.</p></li>
+<li><p>Rainfall data could be very helpful as a covariate given the
+known ecology of the mosquito vector. Including that is beyond the
+expected scope for a good 531 project.</p></li>
+</ul>
+</div>
 
 
 
