--- a/final_project/project06/comments.html
+++ b/final_project/project06/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 6</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,88 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 6</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>The project investigates various papers in the literature and
+adds a deep learning approoach. The mechanistic model gives most
+understanding about the dynamics, but too little time was spent on that
+model compared to ARMA and deep learning. The difficulties experienced
+with the postulated POMP model need thoughtful diagnostics to figure out
+how to make both the science and the time series data analysis work
+together coherently.</p></li>
+<li><p>Elaborate modern methods, variational mode decomposition and
+Neural Basis Expansion Analysis for Time Series, are used. They are
+assessed by one-step forecasting mean absolute prediction error (MAPE)
+which the team struggles to compare properly between data
+transformations. MAPE is not comparable between data transformations for
+the same reason that log-likelihood is not, except the latter can be
+properly adjusted using a Jacobian transformation. It can be good to try
+alternative methods not covered in class, but not at the expense of
+complete and careful use of appropriate methods studied in detail in
+class.</p></li>
+<li><p>Likelihood is a more efficient inference metric than MAPE if the
+model is reasonable. A model that beats simple statistical benchmarks is
+usually good enough for likelihood to become a reasonable criterion.
+Either way, if team prefered MAPE, they should have calculated MAPE also
+for the SEIR model.</p></li>
+<li><p>This project demonstrates a common mistake where the ADF test is
+inappropriate and a poor choice. It is clear that the peaks are
+diminishing through time, indicating nonstationarity. Before taking
+logs, the model used by ADF is especially inappropriate, but even after
+taking logs it would be a poor choice. See, for example Quiz 1 question
+Q1-03.</p></li>
+<li><p>“The residual time series plot shows no visible trend or seasonal
+structure” for ARMA is incorrect. The time plot of residuals shows
+extreme heterskedasticity matching seasonal peaks and troughs. The
+residual diagnostics are trying to remind the team that they should
+consider a logarithmic transformation.</p></li>
+<li><p>The SEIR model should be compared to the ARMA benchmark. The
+fitted model falls short compared to ARMA by 3760-3603 = 157 log units.
+This large discrepancy suggests the SEIR model is missing something
+important.</p></li>
+<li><p>The observation that “Many inference runs failed due to particle
+depletion, numerical overflow, or degeneracy in measurement likelihoods”
+is typical when the model is a poor fit. The inflexible modeling of
+seasonality or the lack of overdispersion in the process model may be
+the issue. Diagnostic checks for the POMP model would help to track this
+down.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>Mean/median summary statistics are not very meaningful for time
+series with plenty of dynamic variation. Best not to show the summaries,
+and avoid statements like, “The mean weekly count is approximately 777,
+and the median is about 763, suggesting the distribution is relatively
+symmetric with some variability” which are appropriate only when the
+data are well modeled as independent and identically
+distributed.</p></li>
+<li><p>For comparing ARMA with log-ARMA, a Jacobian calculation can put
+the log-likelihood and AIC values on the same scale. See, e.g., Chapter
+18 (the measles case study).</p></li>
+<li><p>The ACF, PACF and Box-Ljung sections for residuals for a large
+ARMA selected by AIC is almost always uninformative: AIC has already
+selected a model where there is not much dependence left to be found. It
+would be better use of space to look at normality of residuals. They
+would be found to be long-tailed compared to normal, another clue that a
+log transform is appropriate.</p></li>
+<li><p>The Outlook section looks to be produced by GenAI. Various modern
+methods are listed which have been proposed as alternatives for similar
+model classes, but do not provide plug-and-play likelihood-based
+inference. With no references, and no details, these generic assertions
+are the sort of thing that GenAI could generate.</p></li>
+</ul>
+</div>
 
 
 
