--- a/final_project/project07/comments.html
+++ b/final_project/project07/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 7</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,68 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 7</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>The SARIMA analysis has limitations, but is good enough to
+provide a reasonable benchmark for comparison to mechanistic models.
+SARIMA would be better on a log scale.</p></li>
+<li><p>The novel mechanistic model is developed until it meets the
+benchmark and has somewhat plausible simulations and parameter values.
+More could be done, but this is already a nontrivial
+accomplishment.</p></li>
+<li><p>The report says, “The residuals from the SARIMA model appear to
+be white noise overall.” This is a weak interpretation. The tails are
+substantially longer than normal. One point could even be considered an
+outlier. The residuals have a slow trend.</p></li>
+<li><p>Infectious disease data (like many other non-negative data types)
+usually fits linear Gaussian assumptions better after a log transform.
+We have seen this many times in class and in midterm projects. The team
+should carry out their linear data analysis on the log scale.</p></li>
+<li><p>It would be worth trying to understand the parameter estimates,
+since that would lead to insights about what biological interpretation
+the fitted model is actually proposing. How do they fit with known
+dengue epidemiology? The value <span class="math inline">\(\rho=4\times
+10^{-5}\)</span> might be a useful clue.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>The two year data period is okay for studying high-frequency
+behavior, but the full 2010-2023 dataset (perhaps aggregated to months)
+would give better understanding of inter-annual dynamics.</p></li>
+<li><p>It is incorrect that “The oscillating pattern displayed in the
+ACF plots supports that the data is non-stationary.” The usual
+motivation for the sample ACF assumes a stationary model.</p></li>
+<li><p>An unclear assertion, “By comparing the AIC values and model
+complexity, the most appropriate model is: SARIMA(2,0,0)×(0,0,1)”.
+SARIMA(1,0,1)×(0,0,1) has the same complexity and better AIC, so the
+reasoning is unclear.</p></li>
+<li><p>This dataset is called “Travel-related cases” so it may be that
+not much local transmission occurs in US. In that case, modeling US
+cases by an SIR model (or any extension of it) may be hard to interpret.
+The pattern could be driven not by US transmission but by a sinusoidal
+fluctuation in imported cases.</p></li>
+<li><p>The model supposes that <span class="math inline">\(N=3.2\times
+10^6\)</span> Americans are at risk of dengue. Where does this figure
+come from?</p></li>
+<li><p>A referee requested discussion about the homogeneous mixing
+assumption behind compartment models. That is an interesting topic: that
+assumption motivates the model and guides its interpretation, but
+ultimately the statistical skill of the model is judged by its ability
+to fit the data regardless of fact that humans do not mix anything like
+homogenenously.</p></li>
+</ul>
+</div>
 
 
 
