--- a/final_project/project13/comments.html
+++ b/final_project/project13/comments.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Final projects</title>
+<title>Review comments on Final Project 13</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,149 +349,108 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Final projects</h1>
+<h1 class="title toc-ignore">Review comments on Final Project 13</h1>
 <h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
-<hr />
+<div id="major-points-relevant-to-the-strength-or-correctness-or-scope-of-the-conclusions" class="section level3">
+<h3>Major points (relevant to the strength or correctness or scope of
+the conclusions)</h3>
 <ul>
-<li><p>Projects are posted anonymously below. Source code and data are
-available from <a href="https://github.com/ionides/531w25/tree/main/final_project">https://github.com/ionides/531w25/tree/main/final_project</a>.</p></li>
-<li><p>After the course is over and the class grades are assigned, you
-may choose to request to have your name attached to the
-project.</p></li>
+<li><p>An innovative modeling task. However, there are major issues with
+how the project is presented. Various things are incomplete in strange
+ways, e.g., ” (tweaked for a typical exoplanet study—let me know if your
+bounds differ)“, that look GenAI generated.</p></li>
+<li><p>Consider the following sentences: <em>“We employed the DEoptim
+algorithm, a global optimization tool based on differential evolution,
+to estimate the parameters of your model. This method is perfect for
+handling complex, non-linear, and multi-modal likelihood surfaces, which
+are typical in stochastic models—especially if you’re workin with Kepler
+light curves modeled with a Partial Observed Markov Process (POMP)
+combined with an OU process and boxcar transits. Why DEoptim? It’s
+fantastic at finding the global maximum of the likelihood without
+getting stuck in local optima, unlike traditional gradient -based
+methods that might struggle with noisy or jagged likelihood landscapes.
+It doesn’t need complicated derivatives, which can be tough to compute
+for these kinds of models, making it a robust choice for the data.”</em>
+This reads like GenAI text.</p></li>
+<li><p>The use of DEoptim rather than methods studied in class raises
+questions. If the project showed this was better, that would be great.
+However, we never really find out if the method was successful. There
+are no benchmarks, and no serious discussion of convergence diagnostics
+beyond an assertion that the search was effective. The approaches
+covered in class do these things. The project could be (and quite likely
+is) avoiding mastery of material covered in class, rather than improving
+on it.</p></li>
+<li><p>“simulated trajectories follow the general pattern of the
+observed data” does not seem to match the figure, where the simulated
+trajectories oscillate rapidly, unlike the data.</p></li>
+<li><p>The souce code has hard-coded results, described in the text as
+“Note: I made up these numbers based on typical patterns—swap in your
+actual log-likelihood values if you have them!” In various places, this
+seems like the results were just made up.</p></li>
+<li><p>Referees reported that at least some parts of the code (that were
+not too time-intensive) ran reproducibly and looked well
+written.</p></li>
+<li><p>It would be good to have statistical benchmark models to help
+assess the quality of fit from the likelihood of the mechanistic model.
+ARMA might not be good for these data, but a suitable regression model
+could be appropriate.</p></li>
+<li><p>The residual plot and residual histogram is repeatedly mentioned
+and yet inappropriately interpreted, due to residuals’ very clear
+seasonal patterns with periodicity approximately 400. The ACF plot is
+even much worse, with very large ACF values for all of the first 50
+lags, which is totally inconsistent with the author’s interpretations
+below the ACF plot, and further indicates severe residual
+autocorrelations issue and the severe violation of residual assumption
+of the current model.</p></li>
 </ul>
-<hr />
-<table>
-<colgroup>
-<col width="35%" />
-<col width="35%" />
-<col width="28%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">1. <a href="project01/blinded.html">Influenza in the
-Great Lakes region</a></td>
-<td align="left"><a href="project01/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">2. <a href="project02/blinded.html">Momentum in
-baseball</a></td>
-<td align="left"><a href="project02/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">3. <a href="project03/blinded.html">Flu Cases in
-Michigan</a></td>
-<td align="left"><a href="project03/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">4. <a href="project04/blinded.html">Kerala
-pandemic</a></td>
-<td align="left"><a href="project04/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">5. <a href="project05/blinded.html">Malaria in
-Florida</a></td>
-<td align="left"><a href="project05/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">6. <a href="project06/blinded.html">Hungarian
-chickenpox</a></td>
-<td align="left"><a href="project06/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">7. <a href="project07/blinded.html">Dengue
-fever</a></td>
-<td align="left"><a href="project07/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">8. <a href="project08/blinded.html">Netflix
-returns</a></td>
-<td align="left"><a href="project08/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">9. <a href="project09/blinded.html">NBA team
-strength</a></td>
-<td align="left"><a href="project09/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">10. <a href="project10/blinded.pdf">Heart rate
-variability</a></td>
-<td align="left"><a href="project10/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">11. <a href="project11/blinded.html">Apple stock
-price</a></td>
-<td align="left"><a href="project11/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">12. <a href="project12/blinded.html">Daily gold
-prices</a></td>
-<td align="left"><a href="project12/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">13. <a href="project13/blinded.html">Kepler light
-curves</a></td>
-<td align="left"><a href="project13/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">14. <a href="project14/blinded.html">Influenza in Nova
-Scotia</a></td>
-<td align="left"><a href="project14/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">15. <a href="project15/blinded.html">Bitcoin</a></td>
-<td align="left"><a href="project15/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="even">
-<td align="left">16. <a href="project16/blinded.html">Whooping
-cough</a></td>
-<td align="left"><a href="project16/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td align="left">17. <a href="project17/blinded.html">New York gasoline
-price</a></td>
-<td align="left"><a href="project17/comments.html">Review
-comments</a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<hr />
+</div>
+<div id="minor-points-strengths-or-weaknesses-or-errors-or-potential-improvements" class="section level3">
+<h3>Minor points (strengths or weaknesses or errors or potential
+improvements)</h3>
+<ul>
+<li><p>There are many repetitions of symbols in the equations which make
+the report harder to read.</p></li>
+<li><p>Only Figure 1 is numbered, but elsewhere there are reference to
+Fig. 2, Fig.3, etc, which are not numbered.</p></li>
+<li><p>“converged to a best log-likelihood of -151017.163, demonstrating
+effective optimization over 50 iterations.” What is the evidence that
+the algorithm converged?</p></li>
+<li><p>Technical terms like BKJD (Barycentric Kepler Julian Date) need
+clear explanations for readers without specialized astronomical
+knowledge to understand their significance and practical
+relevance.</p></li>
+<li><p>The redundant presentation of the transit model equation
+(appearing multiple times with slight variations) creates unnecessary
+confusion.</p></li>
+<li><p>Multiple nonsensical uses of “your” make it look like the writing
+was produced to a considerable extent by GenAI.</p></li>
+<li><p>The reference in the report:</p>
+<ul>
+<li>Rappaport, S., Levine, A., Chiang, E., El Mellah, I., Jenkins, J.
+M., Kaltenegger, L., … &amp; Villasenor, J. (2012). “Light-curve
+Analysis of KIC 12557548b: An Extrasolar Planet with a Comet-like Tail.”
+The Astrophysical Journal, 752(1), 1.</li>
+</ul>
+<p>does not exist. Two somewhat close matches are:</p>
+<ul>
+<li><p>Rappaport, S., Levine, A., Chiang, E., El Mellah, I., Jenkins,
+J., Kalomeni, B., Kite, E.S., Kotson, M., Nelson, L., Rousseau-Nepton,
+L. and Tran, K., 2012. Possible disintegrating short-period
+super-Mercury orbiting KIC 12557548. The Astrophysical Journal, 752(1),
+p.1.</p></li>
+<li><p>Budaj, J. (2013). Light-curve analysis of KIC 12557548b: an
+extrasolar planet with a comet-like tail. Astronomy &amp; Astrophysics,
+557, A72.</p></li>
+</ul>
+<p>This strange error looks like a GenAI hallucination. This is minor
+from the point of view of the credibility of the conclusions, but not
+small from the point of view of scholarship.</p></li>
+</ul>
+</div>
 
 
 
